--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,14 +11,19 @@ jobs:
     # needs: detect-changes
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Build and push Docker images
         run: |
-          docker build -t ghcr.io/nsarg372-da3/cs2-frontend:cs2-frontend-latest 
-          docker push ghcr.io/nsarg372-da3/cs2-frontend:cs2-frontend-latest
+          docker buildx build --push -t ghcr.io/nsarg372-da3/cs2-frontend:cs2-frontend-latest .
